--- a/css/styles.css
+++ b/css/styles.css
@@ -428,8 +428,11 @@ footer .container .logo-full {
 }
 
 .section-main-title {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/icons.svg/people-office.jpg);
+    background-image: linear-gradient(to bottom,
+                rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url(../images/people-office.jpg);
+
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
@@ -499,7 +502,7 @@ footer .container {
 
 .social-links {
     display: flex;
-    gap: 16px;
+    gap: 24px;
 
 }
 
@@ -527,7 +530,7 @@ footer .container {
 }
 
 .footer-icon {
-    fill: currentColor;
+    fill: #f4f4fd;
 }
 
 .sect-second-icon {
@@ -554,6 +557,7 @@ footer .container {
 
 .our-team-link {
     width: 40px;
+    height: 40px;
 
 }
 
@@ -610,4 +614,30 @@ footer .container {
 
 .social-links li:first-child .link-item {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link-item {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.social-links-media-item {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-links-media-item:hover {
+    background-color: #31d0aa;
+}
+.social-links-media-item:focus {
+    background-color: #31d0aa;
 }
