--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ footer .container .logo-full {
     background-image: linear-gradient(to bottom,
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-            url(../images/people-office.jpg);
+            url(../images/people-office\ 1.jpg);
 
     background-repeat: no-repeat;
     background-position: 50% 50%;
