--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,8 @@ footer .container .logo-full {
 }
 
 .section-main-title {
-    background-image: linear-gradient(to bottom,
+    background-image: linear-gradient(
+        to bottom,
                 rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url(../images/people-office\ 1.jpg);
@@ -554,7 +555,7 @@ footer .container {
 }
 
 .team-member .social-links {
-    justify-content: center;
+    gap: 24px;
 }
 
 .icon-list-item-team {
