--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,7 @@ footer .container {
      display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-links-media-item:hover,
