--- a/css/styles.css
+++ b/css/styles.css
@@ -434,9 +434,7 @@ footer .container .logo-full {
 }
 
 .section-main-title {
-    background-image: linear-gradient(
-        to bottom,
-                rgba(46, 47, 66, 0.7),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
             url(../images/people-office\ 1.jpg);
 
@@ -521,18 +519,21 @@ footer .container {
 }
 
 .social-links-media-item {
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
-     display: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%;
+    height: 100%;
+    background-color: var(--bg-color, #4d5ae5);
+
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-links-media-item:hover,
-.social-links-media-item:focus {
+.social-link-media-item:hover {
+    background-color: #31d0aa;
+}
+.social-link-media-item:focus {
     background-color: #31d0aa;
 }
 
@@ -556,6 +557,7 @@ footer .container {
 
 .team-member .social-links {
     gap: 24px;
+    justify-content: center;
 }
 
 .icon-list-item-team {
