--- a/css/styles.css
+++ b/css/styles.css
@@ -518,7 +518,7 @@ footer .container {
    
 }
 
-.social-links-media-item {
+.social-link-media-item {
     display: flex;
     align-items: center;
     justify-content: center;
