--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,7 @@ footer .container .logo-full {
 .section-main-title {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-            url(../images/people-office\ 1.jpg);
+            url(../images/people-office-1.jpg);
 
     background-repeat: no-repeat;
     background-position: 50% 50%;
